<resources>
    <string name="app_name">My Contact List</string>
    <string name="button_to_display_a_list_of_contacts">Button to display a list of contacts</string>
    <string name="show_map_of_contact_location">Show map of contact location</string>
    <string name="show_settings">Show settings</string>
    <string name="save">SAVE</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="textview">TextView</string>
    <string name="address">Address:</string>
    <string name="street_address">Street Address</string>
    <string name="contact">Contact:</string>
    <string name="zipcode">Zipcode</string>
    <string name="zip">Zip</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
</resources>